--- a/mcp/package.json
+++ b/mcp/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
