--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",       // ✅ IMPORTANT
+    "module": "CommonJS",      
     "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
